--- a/workspace/project/passwordcheck.css
+++ b/workspace/project/passwordcheck.css
@@ -10,7 +10,6 @@
 /* Bold 700 */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&display=swap');
 
-
 html, button, input, select, textarea {
     font-family: "Noto Sans", "malgun gothic", AppleGothic, dotum, sans-serif;
 }
@@ -42,6 +41,32 @@ body, html {
 
 *, :after, :before, legend, td, th {
     padding: 0;
+}
+
+button {
+    border-radius: 0;
+}
+
+button, input[type=button], input[type=reset], input[type=submit] {
+    /* -webkit-appearance: button; */
+    cursor: pointer;
+}
+
+button, select {
+    text-transform: none;
+}
+
+button {
+    overflow: visible;
+    background-color: transparent;
+    border: none;
+}
+
+button, input, optgroup, select, textarea {
+    color: inherit;
+    font: inherit;
+    margin: 0;
+    -webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -546,122 +571,169 @@ button, input[type=button], input[type=reset], input[type=submit] {
 
 
 /* 메인 */
+
 .wrap {
     min-width: 1050px;
-    margin-top: 90px;
-    margin-bottom: 60px;
-    background-color: #fff;
+    padding: 50px 0;
+    background-color: white;
 }
 
-.top-login {
-    font-weight: 800;
-    font-size: 20px;
-    line-height: 20px;
+.id-title {
+    padding-bottom: 30px;
+    font-weight: 500;
+    font-size: 28px;
     text-align: center;
 }
 
-.main-login {
-    width: 340px;
-    margin: 0px auto;
-    letter-spacing: -0.6px;
+.joinlayout {
+    max-width: 400px;
+    padding: 0 10px 6px 10px;
+    margin: auto;
+    position: relative;
+    background-color: white;
 }
 
-.form-top {
-        margin-top: 30px;
+/* @media (min-width: 1050px)
+.join-layout-certification {
+    padding: 0;
+    margin: 0 20px;
+} */
+
+.join-layout-certification {
+    padding: 0 15px 0 15px;
+    margin: 0;
+    box-shadow: inset 0 -0.5px 0 0 #ddd;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-flex-wrap: nowrap;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    text-align: center;
 }
 
-.form-top-div:first-of-type {
-    margin-bottom: 5px;
+.join-layout-certification-button-1 {
+    display: block;
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    position: relative;
+    height: 48px;
+    font-weight: 500;
+    font-size: 16px;
+    color: #5f0080;
+    line-height: 18px;
+    box-shadow: inset 0px -2px 0px 0px #5f0080;
 }
 
-.form-top-div {
-        padding-bottom: 12px;
+.join-layout-certification-button-2 {
+    display: block;
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    position: relative;
+    height: 48px;
+    font-weight: 400;
+    font-size: 16px;
+    color: #666;
+    line-height: 18px;
 }
 
-.form-top-div input {
-    height: 54px;
+.join-layout-information {
+    padding: 24px 20px;
+}
+
+.css-1blp8ou:not(:first-of-type) {
+    margin-top: 8px;
+}
+
+.join-layout-information-div-div {
+    padding-bottom: 12px;
+}
+
+.join-layout-information-div-div-label {
+    display: inline-block;
+    padding: 8px 0 11px;
     font-size: 14px;
+    font-weight: 500;
+    line-height: 19px;
+    color: #333;
 }
 
-.form-top-div-div {
+.join-layout-information-div-div-div {
     position: relative;
     height: 48px;
 }
 
-.form-top-div-div-input {
-       width: 100%;
+.join-layout-information-div-div-div-input-1 {
+    width: 100%;
     height: 46px;
-    padding: 0px 11px 1px 15px;
+    padding: 0 11px 1px 15px;
     border-radius: 4px;
-    border: 1px solid rgb(221, 221, 221);
+    border: 1px solid #ddd;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
-    color: rgb(51, 51, 51);
+    color: #333;
     outline: none;
     box-sizing: border-box;
 }
 
-.form-middle {
-    display: flex;
-    -webkit-box-pack: end;
-    justify-content: flex-end;
-    margin-top: 10px;
-    font-size: 13px;
+.join-layout-information-div-div-div-input-2 {
+    width: 100%;
+    height: 46px;
+    padding: 0 11px 1px 15px;
+    border-radius: 4px;
+    border: 1px solid #ddd;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 44px;
+    color: #333;
+    outline: none;
+    box-sizing: border-box;
 }
 
-.form-middle-find {
-        color: rgb(51, 51, 51);
-    cursor: pointer;
+.join-layout-information-certification {
+    margin-top: 18px;
 }
 
-.form-middle-span {
-    width: 1px;
-    height: 10px;
-    margin: 3px 6px 0px;
-    background-color: rgb(51, 51, 51);
+.join-layout-information-certification-button:disabled {
+    background-color: #ddd;
 }
 
-.form-bottom {
-        margin-top: 28px;
+/* @media (min-width: 1050px)
+.join-layout-information-certification-button {
+    height: 56px;
+} */
+
+button[disabled], input[disabled] {
+    cursor: default;
 }
 
-.form-bottom-login {
-        display: block;
-    padding: 0px 10px;
+.join-layout-information-certification-button {
+    display: block;
+    padding: 0 10px;
     text-align: center;
     overflow: hidden;
     width: 100%;
-    height: 54px;
-    border-radius: 3px;
-    color: rgb(255, 255, 255);
-    background-color: rgb(95, 0, 128);
-    border: 0px none;
+    height: 52px;
+    border-radius: 4px;
+    color: #fff;
+    /* background-color: #5f0080; */
+    background-color: #ddd;
+    border: 0 none;
 }
 
-.form-bottom-span {
+.join-layout-information-certification-button-span {
     display: inline-block;
     font-size: 16px;
     font-weight: 500;
 }
 
-
-.form-bottom-membership {
-    display: block;
-    padding: 0px 10px;
-    text-align: center;
-    overflow: hidden;
-    width: 100%;
-    height: 54px;
-    border-radius: 3px;
-    color: rgb(95, 0, 128);
-    background-color: rgb(255, 255, 255);
-    border: 1px solid rgb(95, 0, 128);
-}
-
-.form-bottom-membership:last-of-type {
-    margin-top: 10px;
-}
 
 /* 푸터 */
 
@@ -918,13 +990,13 @@ img, legend {
     word-break: break-word;
 }
 
-    .footer-bottom {
-        padding: 20px 0 30px;
-        font-size: 10px;
-        line-height: 15px;
-        text-align: center;
-        background-color: #f7f7f7;
-        color: #999;
+.footer-bottom {
+    padding: 20px 0 30px;
+    font-size: 10px;
+    line-height: 15px;
+    text-align: center;
+    background-color: #f7f7f7;
+    color: #999;
 }
 
 .footer-bottom-em {
