--- a/workspace/project/passwordcheck.css
+++ b/workspace/project/passwordcheck.css
@@ -11,7 +11,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&display=swap');
 
 html, button, input, select, textarea {
-    font-family: "Noto Sans", "malgun gothic", AppleGothic, dotum, sans-serif;
+    font-family: "Noto Sans KR", "malgun gothic", AppleGothic, dotum, sans-serif!important;
 }
 
 body, button, input, select, textarea {
@@ -75,6 +75,10 @@ body {
 }
 
 /* 헤더 */
+
+.high {
+    font-family: "Noto Sans KR", "malgun gothic", AppleGothic, dotum, sans-serif!important;
+}
 
 img, legend {
     border: 0;
@@ -593,11 +597,13 @@ button, input[type=button], input[type=reset], input[type=submit] {
     background-color: white;
 }
 
-/* @media (min-width: 1050px)
+@media (min-width: 1050px){
 .join-layout-certification {
     padding: 0;
     margin: 0 20px;
-} */
+} 
+}
+
 
 .join-layout-certification {
     padding: 0 15px 0 15px;
